
This document provides a high-level view of the changes introduced in Asciidoctor by release.
For a detailed view of what has changed, refer to the {uri-repo}/commits/master[commit history] on GitHub.

== Unreleased

Bug Fixes::

  * Update default stylesheet to remove dash in front of cite on nested quote block (#3847)

Improvements::

  * Extract method to create lexer and formatter in Rouge adapter (#3952)
  * Add support for pygments.rb 2.x (#3969) (*@slonopotamus*)
  * Allow NullLogger to be enabled by setting the `:logger` option to a falsy value (#3982)

Build / Infrastructure::

  * Import documentation for processor into this repository (#3861) (*@graphitefriction*)
  * Run tests against both pygments.rb 1.x and 2.x (#3969) (*@slonopotamus*)

Documentation::

  * add Belarusian translation of built-in attributes (PR #3928) (*@morganov*)

// tag::compact[]
== 2.0.12 (2020-11-10) - @mojavelinux

Bug Fixes::

  * Set type and target property on unresolved footnote reference and unset id property (fixes regression) (#3825)
  * Fix crash when inlining an SVG if the explicit width or height value on the image node is not a string (#3829)
  * Reset word wrap behavior to normal on tables, then reenable again for admonition content, horizontal dlist description, and AsciiDoc table cells (#3833)

Improvements::

  * Pass through role to DocBook output for inline image (#3832)

Compliance::

  * Defer use of Ruby >= 2.3 constructs to restore compatibility with Ruby 2.0 until at least next minor release (#3827)
  * Don't append the default px unit identifier to the explicit width or height value when inlining an SVG (#3829)

Build / Infrastructure::

  * Migrate Linux CI jobs to GitHub Actions (#3837)
  * Migrate Windows CI jobs to GitHub Actions (#3839)
  * Run CI job on macOS (#3842)

// end::compact[]
== 2.0.11 (2020-11-02) - @mojavelinux

Bug Fixes::

  * Fix infinite loop when callout list with obsolete syntax is found inside list item (#3472)